--- a/tienda/src/main/resources/templates/categoria/listado.html
+++ b/tienda/src/main/resources/templates/categoria/listado.html
@@ -2,15 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Humorous</title>
+        <title>TechShop</title>
         <meta charset="UTF-8"/>        
         <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
-        <h2>Información de temporadas</h2>
-        <a th:href="@{/temporada/nuevo}">Nueva Temporada</a>
-        <div th:if="${temporadas !=null and !temporadas.empty}">
+        <h2>Información de categorias</h2>
+        <a th:href="@{/categoria/nuevo}">Nueva Categoría</a>
+        <div th:if="${categorias !=null and !categorias.empty}">
             <table border="1">
                 <tr>
                     <th>Descripción</th>
@@ -18,22 +18,22 @@
                     <th>Eliminar</th>
                     <th>Modificar</th>
                 </tr>
-                <tr th:each="temporada : ${temporadas}">
-                    <td>[[${temporada.descripcion}]]</td>
+                <tr th:each="categoria : ${categorias}">
+                    <td>[[${categoria.descripcion}]]</td>
                     <td style="text-align: center">
                         <input 
                             type="checkbox" 
                             name="activo" 
-                            th:checked= "${temporada.activo}" 
-                            disable="true"/>
+                            th:checked= "${categoria.activo}" 
+                            disabled="true"/>
                     </td> 
-                    <td><a th:href="@{/temporada/eliminar/}+${temporada.idTemporada}">Eliminar</td>
-                    <td><a th:href="@{/temporada/modificar/}+${temporada.idTemporada}">Modificar</td>
+                    <td><a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}">Eliminar</a></td>
+                    <td><a th:href="@{/categoria/modificar/}+${categoria.idCategoria}">Modificar</a></td>
                 </tr>            
             </table>
         </div>
 
-        <div th:if="${temporadas ==null or temporadas.empty}">
+        <div th:if="${categorias ==null or categorias.empty}">
             <h2>No hay categorías que mostrar</h2>
         </div>
         <footer th:replace="layout/plantilla :: footer"/>
