--- a/tienda/src/main/resources/templates/categoria/modificar.html
+++ b/tienda/src/main/resources/templates/categoria/modificar.html
@@ -2,21 +2,21 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Humorous</title>
+        <title>TechShop</title>
         <meta charset="UTF-8"/>       
         <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
-            <h2>Información de Temporada</h2>
-            <a th:href="@{/temporada/listado/}">Regresar</a>
+            <h2>Información de Categoria</h2>
+            <a th:href="@{/categoria/listado/}">Regresar</a>
             <hr/>
-            <form th:action="@{/temporada/guardar}"
+            <form th:action="@{/categoria/guardar}"
                   method="post"
-                  th:object="${temporada}">
+                  th:object="${categoria}">
 
-                <input type="hidden" name="idTemporada" th:field="*{idTemporada}"/>
+                <input type="hidden" name="idCategoria" th:field="*{idCategoria}"/>
 
                 <fieldset>
                     <label for="descripcion">Descripción</label>
