--- a/tienda/src/main/resources/templates/index.html
+++ b/tienda/src/main/resources/templates/index.html
@@ -2,30 +2,29 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Humorous</title>
+        <title>TechShop</title>
         <meta charset="UTF-8"/>       
         <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
-            <h2>Nuestros productos</h2>
-            <div th:if="${productos !=null and !productos.empty}">
+            <h2>Nuestros artículos</h2>
+            <div th:if="${articulos !=null and !articulos.empty}">
                 <table border="1">
                     <tr>
                         <th>Descripción</th> 
                         <th>Precio</th> 
 
                     </tr>
-                    <tr th:each="producto : ${productos}">
-                        <td>[[${producto.descripcion}]]</td> 
-                        <td style="text-align: right">[[${#numbers.formatDecimal(producto.precio,3,2)}]]</td> 
-                        <td><a th:href="@{/carrito/agregar/} + ${producto.idProducto}">Agregar</td> 
+                    <tr th:each="articulo : ${articulos}">
+                        <td>[[${articulo.descripcion}]]</td> 
+                        <td style="text-align: right">[[${#numbers.formatDecimal(articulo.precio,3,2)}]]</td> 
                     </tr>            
                 </table>
             </div>
 
-            <div th:if="${productos ==null or productos.empty}">
+            <div th:if="${articulos ==null or articulos.empty}">
                 <h2>No hay artículos que mostrar</h2>
             </div>
         </div>
