--- a/tienda/src/main/resources/templates/articulo/modificar.html
+++ b/tienda/src/main/resources/templates/articulo/modificar.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://wwww.thymeleaf.org" 
+      xmlns:sec="http://thymeleaft.org/extras/spring-security">
+    <head th:replace="layout/plantilla :: head" >
         <title>TechShop</title>
-        <meta charset="UTF-8"/>        
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
+        <meta charset="UTF-8"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
-            <h2>Información de Artículo</h2>
-            <a th:href="@{/articulo/listado/}">Regresar</a>
+            <h2>Modificación de Artículo</h2>
+            <h3>[[#{articulo.datos}]]</h3>
+            <a th:href="@{/articulo/listado/}">[[#{accion.regresar}]]</a>
             <hr/>
             <form th:action="@{/articulo/guardar}"
                   method="post"
                   th:object="${articulo}">
 
                 <input type="hidden" name="idArticulo" th:field="*{idArticulo}"/>
-
+                <input type="hidden" name="idCategoria" th:field="*{idCategoria}"/>
+                 
                 <fieldset>
-                    <label for="nombre">Descripción</label>
+                    <label for="nombre">[[#{articulo.descripcion}]]</label>
                     <input type="text" name="descripcion" th:field="*{descripcion}"/>
                 </fieldset>
                 <fieldset>
-                    <label for="detalle">Detalle</label>
+                    <label for="detalle">[[#{articulo.detalle}]]</label>
                     <textarea name="detalle" th:field="*{detalle}" rows="6" cols="50"/>
                 </fieldset>
                 <fieldset>
-                    <label for="precio">Precio</label>
+                    <label for="precio">[[#{articulo.precio}]]</label>
                     <input type="number" name="precio" th:field="*{precio}"/>
                 </fieldset>
                 <fieldset>
@@ -39,8 +41,9 @@
                     <input type="checkbox" name="activo" th:field="*{activo}"/>
                 </fieldset>
                 <hr/>
-                <input type="submit" value="Guardar" name="guardar"/>            
-            </form>          
+                <button type="submit" th:text="#{accion.guardar}"/>            
+            </form>
+        <hr/>
         </div>
         <footer th:replace="layout/plantilla :: footer"/>
     </body>
