--- a/tienda/src/main/resources/templates/categoria/listado.html
+++ b/tienda/src/main/resources/templates/categoria/listado.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://wwww.thymeleaf.org" 
+      xmlns:sec="http://thymeleaft.org/extras/spring-security">
+    <head th:replace="layout/plantilla :: head" >
         <title>TechShop</title>
-        <meta charset="UTF-8"/>        
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
+        <meta charset="UTF-8"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <h2>Información de categorias</h2>
-        <a th:href="@{/categoria/nuevo}">Nueva Categoría</a>
+        <h3>[[#{categoria.titulo}]]</h3>
+        <a th:href="@{/categoria/nuevo}">[[#{categoria.nuevo}]]</a>
         <div th:if="${categorias !=null and !categorias.empty}">
             <table border="1">
                 <tr>
-                    <th>Descripción</th>
+                    <th>[[#{categoria.descripcion}]]</th>
                     <th>Activa</th>
-                    <th>Eliminar</th>
-                    <th>Modificar</th>
+                    <th>[[#{accion.eliminar}]]</th>
+                    <th>[[#{accion.actualizar}]]</th>
                 </tr>
                 <tr th:each="categoria : ${categorias}">
                     <td>[[${categoria.descripcion}]]</td>
@@ -26,15 +27,15 @@
                             name="activo" 
                             th:checked= "${categoria.activo}" 
                             disabled="true"/>
-                    </td> 
-                    <td><a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}">Eliminar</a></td>
-                    <td><a th:href="@{/categoria/modificar/}+${categoria.idCategoria}">Modificar</a></td>
+                    </td>
+                    <td><a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}">[[#{accion.eliminar}]]</a></td>
+                    <td><a th:href="@{/categoria/modificar/}+${categoria.idCategoria}">[[#{accion.actualizar}]]</a></td>
                 </tr>            
             </table>
         </div>
-
+        
         <div th:if="${categorias ==null or categorias.empty}">
-            <h2>No hay categorías que mostrar</h2>
+            <h2>[[#categoria.no_mostrar}]]</h2>
         </div>
         <footer th:replace="layout/plantilla :: footer"/>
     </body>
