--- a/tienda/src/main/resources/templates/categoria/modificar.html
+++ b/tienda/src/main/resources/templates/categoria/modificar.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://wwww.thymeleaf.org" 
+      xmlns:sec="http://thymeleaft.org/extras/spring-security">
+    <head th:replace="layout/plantilla :: head" >
         <title>TechShop</title>
-        <meta charset="UTF-8"/>       
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
+        <meta charset="UTF-8"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
-            <h2>Información de Categoria</h2>
-            <a th:href="@{/categoria/listado/}">Regresar</a>
+            <h2>Modificación de Categoría</h2>
+            <h3>[[#{categoria.datos}]]</h3>
+            <a th:href="@{/categoria/listado/}">[[#{accion.regresar}]]</a>
             <hr/>
             <form th:action="@{/categoria/guardar}"
                   method="post"
                   th:object="${categoria}">
 
                 <input type="hidden" name="idCategoria" th:field="*{idCategoria}"/>
-
+               
                 <fieldset>
-                    <label for="descripcion">Descripción</label>
+                    <label for="descripcion">[[#{categoria.descripcion}]]</label>
                     <input type="text" name="descripcion" th:field="*{descripcion}"/>
                 </fieldset>
-
+                
                 <fieldset>
                     <label for="activo">Activo</label>
                     <input type="checkbox" name="activo" th:field="*{activo}"/>
                 </fieldset>
                 <hr/>
-                <input type="submit" value="Guardar" name="guardar"/>            
-            </form>          
+                <button type="submit" th:text="#{accion.guardar}"/>          
+            </form> 
+        <hr/>
         </div>
         <footer th:replace="layout/plantilla :: footer"/>
     </body>
