--- a/tienda/src/main/resources/templates/cliente/busqueda.html
+++ b/tienda/src/main/resources/templates/cliente/busqueda.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://wwww.thymeleaf.org" 
+      xmlns:sec="http://thymeleaft.org/extras/spring-security">
+    <head th:replace="layout/plantilla :: head" >
         <title>TechShop</title>
         <meta charset="UTF-8"/>
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
-        <h2>Buscar Cliente</h2>
-        <a th:href="@{/cliente/listado/}">Regresar</a>
-        <hr/>
-        <form th:action="@{/cliente/resultado}"
-              method="post"
-              th:object="${cliente}">
-            <!-- <input type="hidden" name="idCliente" th:field="*{idCliente}"/> -->
-            <fieldset>
-                <h3>Ingrese el apellido que desea buscar</h3>
-                <input type="text" name="apellidos"/>
-            </fieldset>
-
+            <h2>Buscar Cliente</h2>
+            <a th:href="@{/cliente/listado/}">Regresar</a>
             <hr/>
-            <a th:href="@{/cliente/resultado/}">Buscar</a>          
-        </form>    
+              <form th:action="@{/cliente/resultado}"
+                  method="post"
+                  th:object="${cliente}">
+                <!-- <input type="hidden" name="idCliente" th:field="*{idCliente}"/> -->
+                <fieldset>
+                    <h3>Ingrese el apellido que desea buscar</h3>
+                    <input type="text" name="apellidos"/>
+                </fieldset>
+               
+                <hr/>
+              <a th:href="@{/cliente/resultado/}">Buscar</a>          
+            </form>    
         <footer th:replace="layout/plantilla :: footer"/>
     </body>
 </html>
