--- a/tienda/src/main/resources/templates/cliente/listado.html
+++ b/tienda/src/main/resources/templates/cliente/listado.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://wwww.thymeleaf.org" 
+      xmlns:sec="http://thymeleaft.org/extras/spring-security">
+    <head th:replace="layout/plantilla :: head" >
         <title>TechShop</title>
         <meta charset="UTF-8"/>
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <h2>Información de clientes</h2>
-        <a th:href="@{/cliente/nuevo}">Nuevo Cliente</a>
+        <h3>[[#{cliente.titulo}]]</h3>
+        <a th:href="@{/cliente/nuevo}">[[#{cliente.nuevo}]]</a>
         <a th:href="@{/cliente/busqueda}">Buscar Cliente</a>
         <div th:if="${clientes !=null and !clientes.empty}">
             <table border="1">
                 <tr>
-                    <th>Nombre</th>
-                    <th>Apellidos</th>
-                    <th>Correo</th>
-                    <th>Teléfono</th>
-                    <th>Crédito</th>
-                    <th>Eliminar</th>
-                    <th>Modificar</th>
+                    <th>[[#{cliente.nombre}]]</th>
+                    <th>[[#{cliente.apellidos}]]</th>
+                    <th>[[#{cliente.correo}]]</th>
+                    <th>[[#{cliente.telefono}]]</th>
+                    <th>[[#{cliente.limite}]]</th>
+                    <th>[[#{accion.eliminar}]]</th>
+                    <th>[[#{accion.actualizar}]]</th>
                 </tr>
                 <tr th:each="cliente : ${clientes}">
                     <td>[[${cliente.nombre}]]</td>
@@ -28,14 +29,14 @@
                     <td>[[${cliente.correo}]]</td>
                     <td>[[${cliente.telefono}]]</td>
                     <td style="text-align: right">[[${#numbers.formatDecimal(cliente.credito.limite,3,2)}]]</td>  
-                    <td><a th:href="@{/cliente/eliminar/}+${cliente.idCliente}">Eliminar</a></td>
-                    <td><a th:href="@{/cliente/modificar/}+${cliente.idCliente}">Modificar</a></td>
+                    <td><a th:href="@{/cliente/eliminar/}+${cliente.idCliente}">[[#{accion.eliminar}]]</a></td>
+                    <td><a th:href="@{/cliente/modificar/}+${cliente.idCliente}">[[#{accion.actualizar}]]</a></td>
                 </tr>            
             </table>
         </div>
-
+        
         <div th:if="${clientes ==null or clientes.empty}">
-            <h2>No hay clientes que mostrar</h2>
+            <h2>[[#cliente.no_mostrar}]]</h2>
         </div>
         <footer th:replace="layout/plantilla :: footer"/>
     </body>
