--- a/tienda/src/main/resources/templates/cliente/modificar.html
+++ b/tienda/src/main/resources/templates/cliente/modificar.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://wwww.thymeleaf.org" 
+      xmlns:sec="http://thymeleaft.org/extras/spring-security">
+    <head th:replace="layout/plantilla :: head" >
         <title>TechShop</title>
         <meta charset="UTF-8"/>
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
-            <h2>Información de Cliente</h2>
-            <a th:href="@{/cliente/listado/}">Regresar</a>
+            <h2>Modificación de Cliente</h2>
+            <h3>[[#{cliente.datos}]]</h3>
+            <a th:href="@{/cliente/listado/}">[[#{accion.regresar}]]</a>
             <hr/>
             <form th:action="@{/cliente/guardar}"
                   method="post"
@@ -18,29 +19,31 @@
 
                 <input type="hidden" name="idCliente" th:field="*{idCliente}"/>
                 <input type="hidden" name="idCredito" th:field="*{credito.idCredito}"/>
+                
                 <fieldset>
-                    <label for="nombre">Nombre</label>
+                    <label for="nombre">[[#{cliente.nombre}]]</label>
                     <input type="text" name="nombre" th:field="*{nombre}"/>
                 </fieldset>
                 <fieldset>
-                    <label for="apellidos">Apellidos</label>
+                    <label for="apellidos">[[#{cliente.apellidos}]]</label>
                     <input type="text" name="apellidos" th:field="*{apellidos}"/>
                 </fieldset>
                 <fieldset>
-                    <label for="correo">Correo</label>
+                    <label for="correo">[[#{cliente.correo}]]</label>
                     <input type="email" name="correo" th:field="*{correo}"/>
                 </fieldset>
                 <fieldset>
-                    <label for="telefono">Teléfono</label>
+                    <label for="telefono">[[#{cliente.telefono}]]</label>
                     <input type="tel" name="telefono" th:field="*{telefono}"/>
                 </fieldset>
                 <fieldset>
-                    <label for="limite">Limite de Crédito</label>
+                    <label for="limite">[[#{cliente.limite}]]</label>
                     <input type="number" name="limite" th:field="*{credito.limite}"/>
                 </fieldset>
                 <hr/>
-                <input type="submit" value="Guardar" name="guardar"/>            
-            </form>          
+                <button type="submit" th:text="#{accion.guardar}"/>            
+            </form>
+        <hr/>
         </div>
         <footer th:replace="layout/plantilla :: footer"/>
     </body>
