--- a/tienda/src/main/resources/templates/articulo/listado.html
+++ b/tienda/src/main/resources/templates/articulo/listado.html
@@ -1,47 +1,43 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://wwww.thymeleaf.org" 
-      xmlns:sec="http://thymeleaft.org/extras/spring-security">
-    <head th:replace="layout/plantilla :: head" >
+    <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
-        <meta charset="UTF-8"/>  
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
-        <h2>Información de Artículo</h2>
-        <h3>[[#{articulo.titulo}]]</h3>
-        <a th:href="@{/articulo/nuevo}">[[#{articulo.nuevo}]]</a>
-        <div th:if="${articulos !=null and !articulos.empty}">
-            <table border="1">
-                <tr>
-                    <th>[[#{articulo.descripcion}]]</th>
-                    <th>[[#{articulo.detalle}]]</th>
-                    <th>[[#{articulo.precio}]]</th>
-                    <th>Existencias</th>
-                    <th>Activo</th>
-                    <th>[[#{accion.eliminar}]]</th>
-                    <th>[[#{accion.actualizar}]]</th>
-                </tr>
-                <tr th:each="articulo : ${articulos}">
-                    <td>[[${articulo.descripcion}]]</td>
-                    <td>[[${articulo.detalle}]]</td>
-                    <td style="text-align: right">[[${#numbers.formatDecimal(articulo.precio,3,2)}]]</td>
-                    <td style="text-align: center">[[${articulo.existencias}]]</td>
-                    <td style="text-align: center">
-                        <input 
-                            type="checkbox" 
-                            name="activo" 
-                            th:checked= "${articulo.activo}" 
-                            disabled="true"/>
-                    </td> 
-                    <td><a th:href="@{/articulo/eliminar/}+${articulo.idArticulo}">[[#{accion.eliminar}]]</a></td>
-                    <td><a th:href="@{/articulo/modificar/}+${articulo.idArticulo}">[[#{accion.actualizar}]]</a></td>
-                </tr>            
-            </table>
-        </div>
-        
-        <div th:if="${articulos ==null or articulos.empty}">
-            <h2>[[#articulo.no_mostrar}]]</h2>
+        <div class="contenido">
+            <h2>Información de articulos</h2>
+            <a th:href="@{/articulo/nuevo}"sec:authorize="hasRole('ROLE_ADMIN')">[[#{articulo.nuevo}]]</a>
+            <div th:if="${articulos !=null and !articulos.empty}">
+                <table border="1">
+                    <tr>
+                        <th>Descripción</th>
+                        <th>Precio</th>
+                        <th>Existencias</th>
+                        <th>Activo</th>
+                        <th>[[#{articulo.eliminar}]]</th>
+                        <th>[[#{articulo.actualizar}]]</th>
+                    </tr>
+                    <tr th:each="articulo : ${articulos}">
+                        <td>[[${articulo.descripcion}]]</td>
+                        <td style="text-align: right">[[${#numbers.formatDecimal(articulo.precio,3,2)}]]</td>
+                        <td style="text-align: center">[[${articulo.existencias}]]</td>
+                        <td style="text-align: center">
+                            <input type="checkbox" 
+                                   name="activo" 
+                                   th:checked="${articulo.activo}" 
+                                   disabled="true"/>
+                        </td>                        
+                        <td><a th:href="@{/articulo/eliminar/}+${articulo.idArticulo}">Eliminar</a></td>
+                        <td><a th:href="@{/articulo/modificar/}+${articulo.idArticulo}">Modificar</a></td>
+                    </tr>            
+                </table>
+            </div>
+
+            <div th:if="${articulos ==null or articulos.empty}">
+                <h2>No hay articulos que mostrar</h2>
+            </div>
         </div>
         <footer th:replace="layout/plantilla :: footer"/>
     </body>
