--- a/tienda/src/main/resources/templates/articulo/modificar.html
+++ b/tienda/src/main/resources/templates/articulo/modificar.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://wwww.thymeleaf.org" 
-      xmlns:sec="http://thymeleaft.org/extras/spring-security">
-    <head th:replace="layout/plantilla :: head" >
+    <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
-        <meta charset="UTF-8"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
-            <h2>Modificación de Artículo</h2>
-            <h3>[[#{articulo.datos}]]</h3>
-            <a th:href="@{/articulo/listado/}">[[#{accion.regresar}]]</a>
+            <h2>Información de Articulo</h2>
+            <a th:href="@{/articulo/listado}">Regresar</a>
             <hr/>
             <form th:action="@{/articulo/guardar}"
                   method="post"
                   th:object="${articulo}">
-
                 <input type="hidden" name="idArticulo" th:field="*{idArticulo}"/>
                 <input type="hidden" name="idCategoria" th:field="*{idCategoria}"/>
-                 
+                
                 <fieldset>
-                    <label for="nombre">[[#{articulo.descripcion}]]</label>
-                    <input type="text" name="descripcion" th:field="*{descripcion}"/>
+                    <label for="nombre">Descripcion</label>
+                    <input type="text" name="nombre" th:field="*{descripcion}"/>
                 </fieldset>
                 <fieldset>
-                    <label for="detalle">[[#{articulo.detalle}]]</label>
+                    <label for="detalle">Detalle</label>
                     <textarea name="detalle" th:field="*{detalle}" rows="6" cols="50"/>
                 </fieldset>
                 <fieldset>
-                    <label for="precio">[[#{articulo.precio}]]</label>
+                    <label for="precio">Precio</label>
                     <input type="number" name="precio" th:field="*{precio}"/>
                 </fieldset>
                 <fieldset>
@@ -39,11 +35,10 @@
                 <fieldset>
                     <label for="activo">Activo</label>
                     <input type="checkbox" name="activo" th:field="*{activo}"/>
-                </fieldset>
+                </fieldset>                
                 <hr/>
-                <button type="submit" th:text="#{accion.guardar}"/>            
-            </form>
-        <hr/>
+                <input type="submit" value="Guardar" name="guardar"/>            
+            </form>        
         </div>
         <footer th:replace="layout/plantilla :: footer"/>
     </body>
